# vroom

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  input.json  test_lifetime_constraints.json  test_lifetime_constraints_matrix.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: libosrm.yml  vroom.yml  vroom_libosrm.yml
aws-lambda/: CMakeLists.txt  main.cpp  template.yaml  test.json
docs/: API.md  example_1.json  example_1_sol.json  example_2.json  example_2_sol.json  example_3.json  example_3_sol.json  release.md
examples/: libvroom.cpp  makefile
include/: getopt_win.h  polylineencoder.h
include/polylineencoder/: polylineencoder.cpp  polylineencoder.h
include/rapidjson/: document.h
libvroom_examples/: libvroom.cpp  makefile
scripts/: format.sh
src/: .clang-format  edge.cpp  edge.h  example_5.json  heuristic.h  main.cpp  makefile  mst_heuristic.cpp  mst_heuristic.h  tsp.cpp  tsp.h  tsp_sym.cpp  tsp_sym.h  undirected_graph.cpp
src/algorithms/: ccao_heuristic.cpp  ccao_heuristic.h  christo_heuristic.cpp  christo_heuristic.h  graham_scan.h  heuristic.h  kruskal.cpp  kruskal.h  local_search.cpp  local_search.h  mst_heuristic.cpp  mst_heuristic.h  munkres.cpp  munkres.h
src/heuristics/: ccao_heuristic.cpp  ccao_heuristic.h  christo_heuristic.cpp  christo_heuristic.h  heuristic.cpp  heuristic.h  local_search.cpp  local_search.h  mst_heuristic.cpp  mst_heuristic.h  tsp_strategy.cpp  tsp_strategy.h
src/loaders/: euc_2d_matrix_loader.h  euclidean.h  (+10 more)
(+337 files in other folders)
